Refactor code SocialPost